# rinha-de-backend-2024q1

./: Dockerfile  LICENSE  Makefile  README.MD  docker-compose.yml  nginx.conf  postgresql.conf  pyproject.toml  requirements.txt  script.sql
src/: main.py
src/application/api/: exception_handler.py
src/config/: config.py
src/exceptions/: exceptions.py
src/repositorios/: cliente_repositorio.py  pgsql_connection_factory.py  transacao_repositorio.py
src/schemas/: schemas.py
tests/: test_api.py  test_base.py  test_cliente_repositorio.py  test_transacao_repository.py
