[tool.poetry]
name = "rinha-de-backend-2024q1"
version = "0.1.0"
description = ""
authors = ["Régis Brilhante <regis.f.brilhante@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
hypercorn = "^0.16.0"
gunicorn = "^21.2.0"
gevent = "^24.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"
httpx = "^0.27.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
